Fix FrameView::scrollElementToRect to take already scrolled amount into consideration. https://bugs.webkit.org/show_bug.cgi?id=69220

Patch by Sadrul Habib Chowdhury <sadrul@chromium.org> on 2011-10-04
Reviewed by Simon Fraser.

Source/WebCore:

* page/FrameView.cpp:
(WebCore::FrameView::scrollElementToRect):

LayoutTests:

* fast/dom/scroll-element-to-rect.html:

Canonical link: https://commits.webkit.org/85433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96672 268f45cc-cd09-0410-ab3c-d52691b4dbfc